# adventOfCode

./: .gitignore
2024/Cpp/: CMakeLists.txt
2024/Cpp/Day01/: listProblems.cpp  listProblems.hpp
2024/Cpp/Day02/: levelAnalysis.cpp  levelAnalysis.hpp
2024/Cpp/Day03/: multiplicationProcessor.cpp  multiplicationProcessor.hpp
2024/Cpp/Day04/: xmasWordSearch.cpp  xmasWordSearch.hpp
2024/Cpp/Day05/: sleighManualUpdate.cpp  sleighManualUpdate.hpp
2024/Cpp/Day06/: wardPositions.cpp  wardPositions.hpp
2024/Cpp/Day07/: equationSolver.cpp  equationSolver.hpp
2024/Cpp/Day08/: antennaFrequencies.cpp  antennaFrequencies.hpp
2024/Cpp/cmake/: ExternalDependencies.cmake
2024/Cpp/tests/: CMakeLists.txt  antennaFrequenciesTests.cpp  equationSolverTests.cpp  levelAnalysisTests.cpp  multiplicationProcessorTests.cpp  sleighManualUpdateTests.cpp  wardPositionTests.cpp  xmasWordSearchTests.cpp
2024/Cpp/utils/: asciiMapProcessor.hpp  numbersFromStreamProcessor.hpp
